testing desktop app changes commit

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                 <h3>
                     Feeling hungry?
                 </h3>
-                <h5>Get a random meal by clicking below</h5>
+                <h5>Get a random meaaal by clicking below</h5>
                 <div class="meal-btns">
                     <button class="meal-btn" id="get_meal">Get Meal <i class="fas fa-utensils"></i></button>
                     <button id="prevBtn">See Previous Meals</button>
