html and css changes

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.2/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.min.css">
 </head>
 
 <body>
@@ -18,7 +20,7 @@
                 <h3>
                     Feeling hungry?
                 </h3>
-                <h5>Get a random meaaal by clicking below</h5>
+                <h5>Get a random meal by clicking below</h5>
                 <div class="meal-btns">
                     <button class="meal-btn" id="get_meal">Get Meal <i class="fas fa-utensils"></i></button>
                     <button id="prevBtn">See Previous Meals</button>
